--- a/packages/client/src/style.scss
+++ b/packages/client/src/style.scss
@@ -53,7 +53,8 @@ html, body, #app {
   width: 100%;
   height: 100%;
   color: #c7c5c5;
-  font-family: "Candara Light", "serif", "华文仿宋", "仿宋"
+  font-family: "Candara Light", "serif", "华文仿宋", "仿宋";
+  overflow: hidden;
 }
 
 :root {
@@ -63,6 +64,5 @@ html, body, #app {
 :root.dark-mode {
   --color: black;
 }
-
 
 
