post路由兼容旧博客, blog页优化
resolved #6

--- a/packages/client/src/style.scss
+++ b/packages/client/src/style.scss
@@ -60,10 +60,12 @@ html, body, #app {
 
 :root {
   --color: white;
+  --blog-header-font-color: #000;
 }
 
 :root.dark-mode {
   --color: black;
+  --blog-header-font-color: #fff;
 }
 
 #app {
